<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">风尚潮流</string>
    <string name="title_activity_splash">风尚潮流</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_home">HomeActivity</string>
	 <string name="index">首页</string>
    <string name="category">分类</string>
    <string name="consultation">咨询</string>
    <string name="carrier">购物车</string>
    <string name="me">我的</string>
    <string name="login">登  录</string>
    <string name="account">输入邮箱或手机号码</string>
    <string name="password">输入密码</string>
    <string name="zhuce">注  册</string>
        <string name="qr_register_new_num">注册账号</string>
    <string name="qr_register">用户注册</string>
    <string name="qr_mobile_num">手机号</string>
    <string name="qr_input_mobile_num">请输入手机号码</string>
    <string name="qr_mobile_verify">手机验证</string>
    <string name="qr_set_password">密码设置</string>
    <string name="qr_end_register">注册完成</string>
	<string name="register_tip">提示 \n带*项为必填项\n填写邮箱方便您找回密码</string>
    <string name="begin_trip">开始旅程</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新...</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh...</string>
    <string name="pull_to_refresh_footer_label">松开加载更多...</string>
    <string name="pull_to_refresh_footer_pull_label">上拉更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中...</string>
    <string name="refresh_down_text">下拉刷新</string>
    <string name="refresh_release_text">松开后刷新</string>    
     <string name="Loading">正在获取数据...</string>   
    <string name="receiveName">输入收件人姓名</string>  
  <string name="receiveAddress">输入收件人地址</string>         
<string name="receivePhone">输入联系电话</string>
</resources>
