<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginpage"
    style="@style/mainLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/black" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/title_logo" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relativeLayout1"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <EditText
            android:id="@+id/lgoin_accounts"
            android:layout_width="fill_parent"
            android:layout_height="44.0dip"
            android:layout_marginTop="16dp"
            android:background="@drawable/selector_editor_bg"
            android:ems="10"
            android:focusable="true"
            android:hint="@string/account"
            android:inputType="text"
            android:maxLength="26"
            android:maxLines="1"
            android:paddingLeft="12.0dip"
            android:textColor="#ff1d1d1d"
            android:textColorHint="#ff666666"
            android:textSize="16.0sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp" >

            <EditText
                android:id="@+id/login_password"
                android:layout_width="fill_parent"
                android:layout_height="44.0dip"
                android:background="@drawable/selector_editor_bg"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="16"
                android:maxLines="1"
                android:paddingLeft="12.0dip"
                android:paddingRight="40dp"
                android:textColor="#ff1d1d1d"
                android:textColorHint="#ff666666"
                android:textSize="16.0sp" />

            <ToggleButton
                android:id="@+id/isShowPassword"
                android:layout_width="40.0dp"
                android:layout_height="18.0dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5.0dp"
                android:background="@drawable/selector_toggle"
                android:textOff=""
                android:textOn="" />
        </RelativeLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:background="@drawable/login_regist_bg"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10.0dip"
            android:text="@string/login"
            android:textColor="#ffeeeeee"
            android:textSize="18.0sp" />

        <Button
            android:id="@+id/regist_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/op_bg_selector"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10.0dip"
            android:text="@string/zhuce"
            android:textColor="@color/myred"
            android:textSize="18.0sp" />
    </LinearLayout>

</RelativeLayout>